This is a record of changes to SerialEM since it was first publicly released.

* marks changes or enhancements noticeable to the user, or items of particular
significance, for the stable release version
============================================================================
4/28/21: Allowed a regular script to be called from a Python script, and a
Python script to be called from a regular script.

4/27/21: Fixed uninitialized values in stage restore for dose-symmetric series
(In 3.8).

4/26/21: Fixes for Python: make sure Python is killed when SerialEM crashes,
escape backslashes so they are not misinterpreted in Python, add library to
module package.

4/23/21: Changed Python scripting to run Python executable with script to
solve import problems; this also allows external control from a Python
script.  Added a command to place an image into a buffer.

4/21/21: SEM_3-9-0beta7
4/21/21: Fixed OpenMP library conflict in SEMMCCD plugin that ruined antialias
reduction at least in GMS 3.43.

4/16/21: SEM_3-9-0beta6
4/16/21: Rebuilt JeolCamPlugin, HitachiPlugin, DEcamPlugin for beta package
with proper libraries.

4/16/21: Probably fixed problem with acquiring frames in GMS 3.43 (in 3.8).

4/3/21: Added Python image type that can give access to an image in a buffer,
but found that numpy and scipy currently hang or crash SerialEM when
imported (don't try it).

4/2/21: SEM_3-8-8
4/2/21: Fixed crash at end of STEM montage on systems with more than one
detector (In 3.8).

3/31/21: Added optional entry to UpdateGroupZ to update the next item's group.

3/31/21: Added ability to use a monospaced font and to adjust
indentation more easily in script editor.

3/29/21: Fixed commands taking strings from the rest of the line for Python.

3/27/21: Improvements and changes in behavior for Python support; new plugins
available.

3/23/21: Python scripting now works, with plugins available.

3/22/21: Fixed dose-symmetric series in STEM mode to stop saving, restoring,