@@ -49,7 +49,7 @@ MAC_SAME_NAME(SetStringVar, 0, 0, SETSTRINGVAR)
 MAC_SAME_FUNC(DoKeyBreak, 0, 0, Break, DOKEYBREAK)
 MAC_SAME_FUNC(ZeroLoopElseIf, 0, 0, If, ZEROLOOPELSEIF)
 MAC_SAME_FUNC_ARG(Exit, 0, 4, ScriptEnd, EXIT, ds)
-MAC_SAME_FUNC_NOARG(Return, 0, 4, ScriptEnd, RETURN)
+MAC_SAME_FUNC_ARG(Return, 0, 4, ScriptEnd, RETURN, ssssss)
 MAC_SAME_FUNC(Function, 1, 4, ScriptEnd, FUNCTION)
 MAC_SAME_FUNC(EndFunction, 0, 4, ScriptEnd, ENDFUNCTION)
 MAC_SAME_NAME(Repeat, 0, 4, REPEAT)
