@@ -4,7 +4,8 @@ This is a record of changes to SerialEM since it was first publicly released.
 significance, for the stable release version
 ============================================================================
 4/28/21: Allowed a regular script to be called from a Python script, and a
-Python script to be called from a regular script.
+Python script to be called from a regular script.  Added ability to return
+values from a function or script call with the Return command.
 
 4/27/21: Fixed uninitialized values in stage restore for dose-symmetric series
 (In 3.8).
